--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -1,3 +1,43 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<main class="indexMain">
+    <nav class="text-right py-3 mr-3">
+        <div class="row">
+            <div class="col-6 text-left">
+                <img src="~/Content/obrazki/u11.png" />
+            </div>
+            <div class="col-6">
+                <button class="btn btn-light" onclick="">Logowanie</button>
+                <button class="btn btn-light" onclick="">Rejestracja</button>
+            </div>
+        </div>
+    </nav>
+    <section class="text-center">
+        <div class="row my-3">
+            <div class="col-6">
+                <img src="~/Content/obrazki/u9.png" class="imgIndex " />
+            </div>
+            <div class="col-6 text-left">
+                <h5 class="font-weight-bold">
+                    Warsztat<br />
+                    Samochodowy<br />
+                    Ar-Car
+                </h5>
+            </div>
+        </div>       
+        <p>
+            <button class="btn btn-sm btn-light">Aplikacja</button>
+        </p>
+        <p>
+            <button class="btn btn-sm btn-light">Umawiane wizyty</button>
+        </p>
+        <p>
+            <button class="btn btn-sm btn-light">Cennik</button>
+        </p>
+        <p>
+            <button class="btn btn-sm btn-light">O nas</button>
+        </p>
+            <button class="btn btn-sm btn-light mb-5">Kontakt</button>
+    </section>
+</main>
