--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             </div>
         </div>       
         <p>
-            <button class="btn btn-sm btn-light">Aplikacja</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Aplikacja","Home")'">Aplikacja</button>
         </p>
         <p>
             <button class="btn btn-sm btn-light">Umawiane wizyty</button>
