--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
@@ -5,13 +5,16 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <strong>Adres:</strong>
+    <br />Miła 17<br />
+    35-317 Rzeszów<br />
+    tel.: 111-222-333<br />
+    e-mail: biuro@ar-car.pl<br />
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Godziny otwarcia:</strong>   
+    <br />Poniedziałek – Piątek 08:00 - 17:00<br />
+    Sobota: nieczynne<br/ >
+    Niedziela: nieczynne<br />
 </address>
