--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Content/Site.css
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Content/Site.css
@@ -1,7 +1,9 @@
 ﻿body {
  
 }
-
+section {
+    font-size: 1.5em;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -40,4 +42,7 @@ textarea {
 .aplikacja-section{
     font-size:1.6em;
     line-height:1.1em;
+}
+.lokalizacja-h2{
+    margin-right:9%;
 }
