--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿<nav style="background-color:#99CCFF" class="text-center py-3">
+    <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
+    <h2 class="lokalizacja-h2">Kontakt</h2>
+</nav>
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
@@ -18,3 +22,6 @@
     Sobota: nieczynne<br/ >
     Niedziela: nieczynne<br />
 </address>
+
+
+
