--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
                 <img src="~/Content/obrazki/u11.png" />
             </div>
             <div class="col-6">
-                <button class="btn btn-light" onclick="">Logowanie</button>
-                <button class="btn btn-light" onclick="">Rejestracja</button>
+                <button class="btn btn-light" onclick="location.href='@Url.Action("Login","Account")'">Logowanie</button>
+                <button class="btn btn-light" onclick="location.href='@Url.Action("Register","Account")'">Rejestracja</button>
             </div>
         </div>
     </nav>
