--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Shared/_Layout.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     <a href="Url.Action()">Ar-Car</a>
                 </div>
                 <div class="col-9 text-right pt-1">
-                    <a href="Url.Action()" class="m-3">Oferta</a>
+                    <a href="@Url.Action("Oferta","Home")" class="m-3">Oferta</a>
                     <a href="@Url.Action("Contact","Home")" class="m-3">Kontakt</a>
                     <a href="Url.Action()" class="m-3">Lokalizacja</a>
                     <a href="@Url.Action("O_nas","Home")" class="m-3">O nas</a>
