--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
@@ -3,6 +3,7 @@
     <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
     <h2 class="lokalizacja-h2">Kontakt</h2>
 </nav>
+<a href="" class="btn btn-primary">Kontakt</a>
 @{
     ViewBag.Title = "Contact";
 }
