--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/O_nas.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/O_nas.cshtml
@@ -6,6 +6,7 @@
     <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
     <h2 class="lokalizacja-h2">O_nas</h2>
 </nav>
+<a href="" class="btn btn-primary">O_nas</a>
 <address>
     <br />
     Ar-Car oferuje rozwiązania dla branż technicznych głównie związanych z transportem i motoryzacją. Posiadamy liczny sprzęt i bogato wyposażony warsztat, świadczymy usługi spawalnicze i naprawcze. Pracują u nas najlepsi i doświadczeni fachowcy.
