--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
@@ -2,17 +2,18 @@
 <nav style="background-color:#99CCFF" class="text-center py-3">
     <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
     <h2 class="lokalizacja-h2">Oferta</h2>
-    </nav>
-    @{
-        ViewBag.Title = "Oferta";
-    }
-    <br />
-    <strong>Nasz warsztat oferuje:</strong>
+</nav>
+<a href="" class="btn btn-primary">Oferta</a>
+@{
+    ViewBag.Title = "Oferta";
+}
+<br />
+<strong>Nasz warsztat oferuje:</strong>
 <br>*sklep z częściami<br />
 <br>*Lakierowanie<br />
 <br>*Mechanika<br />
 <br>*Blacharka<br />
 <br>*Nabijanie klimatyzacji<br />
 <br>*Diagnostyka<br />
-    <br />
+<br />
 
