--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
@@ -3,17 +3,19 @@
     <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
     <h2 class="lokalizacja-h2">Oferta</h2>
 </nav>
-<a href="" class="btn btn-primary">Oferta</a>
+
 @{
     ViewBag.Title = "Oferta";
 }
-<br />
-<strong>Nasz warsztat oferuje:</strong>
-<br>*sklep z częściami<br />
-<br>*Lakierowanie<br />
-<br>*Mechanika<br />
-<br>*Blacharka<br />
-<br>*Nabijanie klimatyzacji<br />
-<br>*Diagnostyka<br />
-<br />
+<br /><div class="text-center">
+    <strong>Nasz warsztat oferuje:</strong>
+
+    <br><a href="" class="btn btn-primary">sklep z częściami</a><br />
+    <br><a href="" class="btn btn-primary">Lakierowanie</a><br />
+    <br><a href="" class="btn btn-primary">Mechanika</a><br />
+    <br><a href="" class="btn btn-primary">Blacharka</a><br />
+    <br><a href="" class="btn btn-primary">Nabijanie klimatyzacji</a><br />
+    <br><a href="" class="btn btn-primary">Diagnostyka</a><br />
+    <br />
+</div>
 
