--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Contact.cshtml
@@ -9,21 +9,22 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+<br /><div class="text-center">
+    <address>
+        <strong>Adres:</strong>
+        <br />Miła 17<br />
+        35-317 Rzeszów<br />
+        tel.: 111-222-333<br />
+        e-mail: biuro@ar-car.pl<br />
+    </address>
 
-<address>
-    <strong>Adres:</strong>
-    <br />Miła 17<br />
-    35-317 Rzeszów<br />
-    tel.: 111-222-333<br />
-    e-mail: biuro@ar-car.pl<br />
-</address>
-
-<address>
-    <strong>Godziny otwarcia:</strong>   
-    <br />Poniedziałek – Piątek 08:00 - 17:00<br />
-    Sobota: nieczynne<br/ >
-    Niedziela: nieczynne<br />
-</address>
-
+    <address>
+        <strong>Godziny otwarcia:</strong>
+        <br />Poniedziałek – Piątek 08:00 - 17:00<br />
+        Sobota: nieczynne<br/ >
+        Niedziela: nieczynne<br />
+    </address>
+    <br />
+</div>
 
 
