--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Edycja_oferty.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Edycja_oferty.cshtml
@@ -7,15 +7,17 @@
 @{
     ViewBag.Title = "Edycja_oferty";
 }
-<br /><div class="text-center">
-    <br>Rodzaj usługi<br />
-    <input type="text" class="form-control" />
-    <br>Opis<br />
-    <textarea class="form-control"></textarea>
-    <br>Data umówienia<br />
-    <input type="text" class="form-control" />
-    <br />
+<div class="row mb-4">
+    <div class="m-auto">
+        <br>Rodzaj usługi<br />
+        <input type="text" class="form-control" />
+        <br>Opis<br />
+        <textarea class="form-control"></textarea>
+        <br>Data umówienia<br />
+        <input type="text" class="form-control" />
+        <br />
 
-    <br><a href="" class="btn btn-primary">Edytuj</a><br />
+        <br><a href="" class="btn btn-primary">Edytuj</a><br />
 
+    </div>
 </div>
