--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -33,11 +33,11 @@
             <button class="btn btn-sm btn-light">Umawiane wizyty</button>
         </p>
         <p>
-            <button class="btn btn-sm btn-light">Cennik</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Cennik","Home")'">Cennik</button>
         </p>
         <p>
-            <button class="btn btn-sm btn-light">O nas</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("O_nas","Home")'">O nas</button>
         </p>
-            <button class="btn btn-sm btn-light mb-5">Kontakt</button>
+            <button class="btn btn-sm btn-light mb-5" onclick="location.href='@Url.Action("Contact","Home")'">Kontakt</button>
     </section>
 </main>
