--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Mechanika.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Mechanika.cshtml
@@ -8,10 +8,10 @@
         <a href="@Url.Action("Index","Home")"><img src="~/Content/obrazki/u5.png" class="float-left mt-2 ml-4" /></a>
         <h2 class="lokalizacja-h2 font-weight-bold">Lakiernia</h2>
     </nav>
-    <section class="row py-1 m-auto" style="font-size:1.2em;line-height:1.2em;">
+    <section class="row py-1 m-auto text-center" style="font-size:1.2em;line-height:1.2em;">
         <div class="col-2"></div>
-        <div class="col-8">
-            <img src="~/Content/obrazki/u10 (2).png" class="img-fluid" />
+        <div class="col-8 ">
+            <img src="~/Content/obrazki/u10 (2).png" class="img-fluid " />
             <ul>
                 - wymiana oleju<br />
                 - wymiana filtrów<br />
