--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Oferta.cshtml
@@ -10,12 +10,12 @@
 <br /><div class="text-center">
     <strong>Nasz warsztat oferuje:</strong>
 
-    <br><a href="" class="btn btn-primary">sklep z częściami</a><br />
-    <br><a href="" class="btn btn-primary">Lakierowanie</a><br />
-    <br><a href="" class="btn btn-primary">Mechanika</a><br />
-    <br><a href="" class="btn btn-primary">Blacharka</a><br />
-    <br><a href="" class="btn btn-primary">Nabijanie klimatyzacji</a><br />
-    <br><a href="" class="btn btn-primary">Diagnostyka</a><br />
+    <br><a href="@Url.Action("Sklep_z_czesciami","Home")" class="btn btn-primary">sklep z częściami</a><br />
+    <br><a href="@Url.Action("Lakiernia","Home")" class="btn btn-primary">Lakierowanie</a><br />
+    <br><a href="@Url.Action("Mechanika","Home")" class="btn btn-primary">Mechanika</a><br />
+    <br><a href="@Url.Action("Blacharnia","Home")" class="btn btn-primary">Blacharka</a><br />
+    <br><a href="@Url.Action("Klimatyzacja","Home")" class="btn btn-primary">Nabijanie klimatyzacji</a><br />
+    <br><a href="@Url.Action("","Home")" class="btn btn-primary">Diagnostyka</a><br />
     <br />
 </div>
 
