Zmiany umawianie wizyt

--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -30,14 +30,14 @@
             <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Aplikacja","Home")'">Aplikacja</button>
         </p>
         <p>
-            <button class="btn btn-sm btn-light">Umawiane wizyty</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Umawianie_wizyt","Home")'">Umawiane wizyty</button>
         </p>
         <p>
             <button class="btn btn-sm btn-light">Cennik</button>
         </p>
         <p>
-            <button class="btn btn-sm btn-light">O nas</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("O_nas","Home")'">O nas</button>
         </p>
-            <button class="btn btn-sm btn-light mb-5">Kontakt</button>
+            <button class="btn btn-sm btn-light mb-5" onclick="location.href='@Url.Action("Contact", "Home")'">Kontakt</button>
     </section>
 </main>
