--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
             <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Aplikacja","Home")'">Aplikacja</button>
         </p>
         <p>
-            <button class="btn btn-sm btn-light">Umawiane wizyty</button>
+            <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Umawianie_wizyt","Home")'">Umawiane_wizyty</button>
         </p>
         <p>
             <button class="btn btn-sm btn-light" onclick="location.href='@Url.Action("Cennik","Home")'">Cennik</button>
